Update outdated info

--- a/index.html
+++ b/index.html
@@ -50,14 +50,16 @@
                 <p>Take a peak at some of the projects in early development:</p>
                 <ul>
                     <li><a href="https://mcspaces.net">MCSpaces</a>, a place to showcase Minecraft builds, resource packs, and servers in the browser</li>
-                    <li><a href="https://playvality.com">Vality</a>, a unique Minecraft server in the works</li>
+                    <li><a href="https://mc.avilon.org">AvilonMC</a>, our unique community Minecraft server in the works</li>
                 </ul>
                 <h2>Community</h2>
                 <p>The community is active in a few different places:</p>
                 <ul>
                     <li>Join <a href="https://avilon.org/discord">the Discord server</a> to text and voice chat about our projects, games, and more!</li>
-                    <li>Become a part of our community clan on Clash of Clans! Request to join the clan, <a 
-href="https://www.clashofstats.com/clans/avilon-2928LP0YU/summary">AVILON</a>, using the tag <kbd>#2928LP0YU</kbd>.</li>
+                    <li>Let your imagination run wild on <a 
+                        href="https://mc.avilon.org">our Minecraft server</a>. You can connect using the IP <kbd>mc.avilon.org</kbd>.</li>
+                    <li>Become a part of <a 
+                        href="https://www.clashofstats.com/clans/avilon-2928LP0YU/summary">our clan</a> on Clash of Clans! Find us in-game by searching the tag <kbd>#2928LP0YU</kbd>.</li>
                 </ul>
                 <h2>Company</h2>
                 <p>Avilon LLC is a very small company (currently just <a href="https://valion.me">myself</a>), and it exists to provide a business space for me to pursue some tech-related ventures.</p>
