Update info to reflect current state of org

--- a/index.html
+++ b/index.html
@@ -46,23 +46,16 @@
             </header>
 
             <section class="page-content">
-                <h2>Creations</h2>
-                <p>Take a peak at some of the projects in early development:</p>
+                <h2>Game with Us</h2>
+                <p>Avilon hosts a few relaxed gaming communities:</p>
                 <ul>
-                    <li><a href="https://mcspaces.net">MCSpaces</a>, a place to showcase Minecraft builds, resource packs, and servers in the browser</li>
-                    <li><a href="https://mc.avilon.org">AvilonMC</a>, our unique community Minecraft server in the works</li>
+                    <li>Let your imagination run wild on the <a 
+                        href="https://mc.avilon.org">Avilon Minecraft server</a>! You can connect using <kbd>mc.avilon.org</kbd> as the server address.</li>
+                    <li>Become a part of our <a 
+                        href="https://coc.avilon.org">clan on Clash of Clans</a>! Find us in-game by searching the tag <kbd>#2928LP0YU</kbd>.</li>
                 </ul>
-                <h2>Community</h2>
-                <p>The community is active in a few different places:</p>
-                <ul>
-                    <li>Join <a href="https://avilon.org/discord">the Discord server</a> to text and voice chat about our projects, games, and more!</li>
-                    <li>Let your imagination run wild on <a 
-                        href="https://mc.avilon.org">our Minecraft server</a>. You can connect using the IP <kbd>mc.avilon.org</kbd>.</li>
-                    <li>Become a part of <a 
-                        href="https://www.clashofstats.com/clans/avilon-2928LP0YU/summary">our clan</a> on Clash of Clans! Find us in-game by searching the tag <kbd>#2928LP0YU</kbd>.</li>
-                </ul>
-                <h2>Company</h2>
-                <p>Avilon LLC is a very small company (currently just <a href="https://valion.me">myself</a>), and it exists to provide a business space for me to pursue some tech-related ventures.</p>
+                <h2>About the Studio</h2>
+                <p>Eventually Avilon will evolve into a complete creative tech studio, once <a href="https://valion.me">I</a> decide which personal projects I wish to turn into business ventures. It'll be a workspace for building artistic technology that is engaging, communal, and useful.</p>
                 <p>For business-related inquiries, please send an email to<br><kbd>team at avilon.org</kbd>.</p>
             </section>
             
@@ -70,14 +63,13 @@
                 <nav class="social-links">
                     <a class="github-link" href="https://github.com/avilonorg"><i class="fa-brands fa-github"></i></a> |
                     <a class="twitter-link" href="https://twitter.com/avilonorg"><i class="fa-brands fa-twitter"></i></a> |
-                    <a class="instagram-link" href="https://instagram.com/avilonorg"><i class="fa-brands fa-instagram"></i></a> |
-                    <a class="discord-link" href="https://avilon.org/discord"><i class="fa-brands fa-discord"></i></a>
+                    <a class="instagram-link" href="https://instagram.com/avilonorg"><i class="fa-brands fa-instagram"></i></a>
                 </nav>    
             </footer>
         </main>
 
         <footer class="site-footer">
-            <p class="copyright-text">&copy; <span id="copyright-year"></span> Avilon LLC. All rights reserved.</p>
+            <p class="copyright-text">&copy; <span id="copyright-year"></span> <a href="https://valion.me">Jeremy Kennard</a>. All rights reserved.</p>
         </footer>
     </div>
 
