Update gaming community info

--- a/index.html
+++ b/index.html
@@ -47,13 +47,7 @@
 
             <section class="page-content">
                 <h2>Game with Us</h2>
-                <p>Currently, Avilon hosts a few small gaming communities:</p>
-                <ul>
-                    <li>Let your imagination run wild on the <a 
-                        href="https://mc.avilon.org">Avilon Minecraft server</a>! You can connect using <kbd>mc.avilon.org</kbd> as the server address.</li>
-                    <li>Become a part of our <a 
-                        href="https://coc.avilon.org">clan on Clash of Clans</a>! Find us in-game by searching the tag <kbd>#2928LP0YU</kbd>.</li>
-                </ul>
+                <p>Currently, Avilon hosts a <a href="https://gaming.avilon.org">gaming community</a> where we hang out and play a number of fun video games together. But right now we're most focused on launching our <a href="https://mc.avilon.org">Minecraft server</a>.</p>
                 <h2>About the Studio</h2>
                 <p>Eventually, Avilon will evolve into a complete creative tech studio, once <a href="https://valion.me">I</a> decide which personal projects I wish to turn into business ventures. It'll be a workspace for building and sharing artistic technology that is engaging, communal, and useful.</p>
                 <p>For business-related inquiries, please send an email to<br><kbd>team at avilon.org</kbd>.</p>
