Update gaming info

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 
             <section class="page-content">
                 <h2>Game with Us</h2>
-                <p>Currently, Avilon hosts a <a href="https://gaming.avilon.org">gaming community</a> where we hang out and play a number of fun video games together. But right now we're most focused on launching our <a href="https://mc.avilon.org">Minecraft server</a>.</p>
+                <p>Currently, Avilon hosts a <a href="https://gaming.avilon.org">gaming community</a> where we hang out and play a number 
+of fun video games together. Right now we're working on launching our Minecraft server and growing our clan on Clash of Clans.</p>
                 <h2>About the Studio</h2>
                 <p>Eventually, Avilon will evolve into a complete creative tech studio, once <a href="https://valion.me">I</a> decide which personal projects I wish to turn into business ventures. It'll be a workspace for building and sharing artistic technology that is engaging, communal, and useful.</p>
                 <p>For business-related inquiries, please send an email to<br><kbd>team at avilon.org</kbd>.</p>
